# informatics_laboratories_13

./: README.md  pyproject.toml
appendix/: report.docx
articles/: admin.py  models.py  views.py
articles/migrations/: 0001_initial.py
articles/static/css/: archive.css  article.css
articles/templates/: archive.html  article.html  create_post.html  login.html  registration.html
blog/: settings.py  urls.py
